# miscutils

./: .clang-format  CMakeLists.txt  README.md
cmake/: miscutils_deps.cmake
miscutils/: CMakeLists.txt  config.hpp.in  fail.cpp  miscutils.hpp  replace_byte.cpp  succeed.cpp  throttle.cpp
miscutils/details/: exception_handler.hpp  help_request.hpp
miscutils_testing/: CMakeLists.txt
scripts/: check-format.sh
